# Practice-Game

./: CMakeLists.txt  test.txt
src/: Button.ipp  Direction.cpp  Direction.h  DirectionalInput.cpp  Game.cpp  MenuScene.cpp  PlayScene.cpp  Playfield.cpp  Resources.cpp  Scene.cpp  Segment.cpp  Snake.cpp  Snake.h  TextScene.cpp  main.cpp
src/headers/: Button.h  Direction.h  DirectionalInput.h  Game.h  MenuScene.h  PlayScene.h  Playfield.h  Resources.h  Scene.h  Segment.h  Snake.h  TextScene.h
